WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106050
REGRESSION(
r136152
): [WK2] [GTK] Web inspector is not visible
https://bugs.webkit.org/show_bug.cgi?id=106050
Summary
REGRESSION(r136152): [WK2] [GTK] Web inspector is not visible
arno.
Reported
2013-01-03 15:17:19 PST
Hi, with MiniBrowser, web inspector is not visible. I launch MiniBrowser (with --enable-developer-extras) flag; I right-click/inspect element. And I can see that web inspector is active, because I can select an element, and its layout overlay appears. But inspector widget is not attached to the page. That happens because inspector widget is not registered as inspectorView of the webViewBase. So, it would be better to call webkitWebViewBaseAddWebInspector instead of just gtk_container_add Additionaly, it is better to call gtk_container_add instead of webkitWebViewBaseAddWebInspector when inspector has its own window (because m_inspectorWindow is not a WEBKIT_WEB_VIEW_BASE).
Attachments
patch proposal
(2.23 KB, patch)
2013-01-03 15:21 PST
,
arno.
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
arno.
Comment 1
2013-01-03 15:21:05 PST
Created
attachment 181233
[details]
patch proposal
Carlos Garcia Campos
Comment 2
2013-01-04 01:34:56 PST
Comment on
attachment 181233
[details]
patch proposal Thanks!
WebKit Review Bot
Comment 3
2013-01-10 01:00:24 PST
Comment on
attachment 181233
[details]
patch proposal Clearing flags on attachment: 181233 Committed
r139293
: <
http://trac.webkit.org/changeset/139293
>
WebKit Review Bot
Comment 4
2013-01-10 01:00:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug