[WK2] [Gtk] web inspector is not visible. https://bugs.webkit.org/show_bug.cgi?id=106050

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2013-01-10
Reviewed by Carlos Garcia Campos.

Use webkitWebViewBaseAddWebInspector when adding web inspector to
webview in order to make webview aware of its existence.

Use gtk_container_add when adding web inspector wiew to its own window
because m_inspectorWindow is not a WebKitWebViewBase.

* UIProcess/gtk/WebInspectorProxyGtk.cpp:
(WebKit::WebInspectorProxy::createInspectorWindow):
(WebKit::WebInspectorProxy::platformAttach):

Canonical link: https://commits.webkit.org/124741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139293 268f45cc-cd09-0410-ab3c-d52691b4dbfc