Source/WebKit2/UIProcess/gtk/WebInspectorProxyGtk.cpp
@@ -93,7 +93,7 @@ void WebInspectorProxy::createInspectorWindow()
     gtk_window_set_title(GTK_WINDOW(m_inspectorWindow), _("Web Inspector"));
     gtk_window_set_default_size(GTK_WINDOW(m_inspectorWindow), initialWindowWidth, initialWindowHeight);
 
-    webkitWebViewBaseAddWebInspector(WEBKIT_WEB_VIEW_BASE(m_inspectorWindow), m_inspectorView);
+    gtk_container_add(GTK_CONTAINER(m_inspectorWindow), m_inspectorView);
     gtk_widget_show(m_inspectorView);
 
     g_object_add_weak_pointer(G_OBJECT(m_inspectorWindow), reinterpret_cast<void**>(&m_inspectorWindow));
@@ -191,7 +191,7 @@ void WebInspectorProxy::platformAttach()
     if (m_client.attach(this))
         return;
 
-    gtk_container_add(GTK_CONTAINER(m_page->viewWidget()), m_inspectorView);
+    webkitWebViewBaseAddWebInspector(WEBKIT_WEB_VIEW_BASE(m_page->viewWidget()), m_inspectorView);
     gtk_widget_show(m_inspectorView);
 }
 
